# Javis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  WORKSPACE_REGISTRATION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json  settings.local.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/sidecar/browser/: package.json  tsconfig.json
apps/desktop/src-tauri/sidecar/browser/src/: index.ts
apps/desktop/src-tauri/src/: anthropic.rs  audit.rs  browser.rs  code.rs  computer.rs  database.rs  error.rs  file_write.rs  files.rs  git.rs  global_hotkey.rs  inspect.rs  lib.rs  main.rs  mcpserv.rs  pdf.rs  sandbox.rs  scan.rs  shell.rs  skills.rs  streaming.rs  terminal.rs  web.rs  workspace.rs
docs/: 2026-05-25_TASK_PLAN.md  2026-05-26_TASK_PLAN.md  2026-05-27_TASK_PLAN.md  2026-05-28_ANALYSIS_AND_ADJUSTMENT.md  2026-05-28_MODEL_PROFILE_PLAN.md  2026-05-28_TASK_PLAN.md  2026-05-29_SMART_FILE_DISCOVERY_PLAN.md  2026-05-29_TASK_PLAN.md  2026-05-30_TASK_PLAN.md  AGENT_ARCHITECTURE_ANALYSIS.md  AGENT_LEARNING_BOUNDARIES.md  AGENT_MEMORY_PLAN.md  AGENT_OPTIMIZATION_ANALYSIS.md  AGENT_PROMPT_ARCHITECTURE.md  AGENT_RUNTIME_DURABILITY_PLAN.md  AGENT_SESSION_WORKBENCH_PLAN.md  ARCHITECTURE.md  BROWSER_AGENT_PLAN.md  BUILD_SIGN_RELEASE_RUNBOOK.md  CHINESE_OPTIMIZATION.md  COMMANDER_DAG_PLAN_COMPILER_PLAN.md  COMPUTER_USE_DESKTOP_UI_DATASET_ENHANCEMENT_PLAN.md  COMPUTER_USE_LOCAL_VISION_WORKER_PROTOCOL.md  COMPUTER_USE_PLAN.md  COMPUTER_USE_YOLO26_LOCAL_VISION_PLAN.md  CORE_CONTRACTS.md  DEVELOPMENT.md  IMPROVEMENT_PLAN.md  JAVIS_CONVERSATION_FIRST_ARCHITECTURE.md  JAVIS_FIX_PLAN.md  JAVIS_ISSUE_REPORT.md  LEARNING_AND_IMPLEMENTATION_PLAN.md  MARVIS_TECH_SUPPORT.md  MULTI_AGENT_FIX_PLAN.md  MULTI_AGENT_ORCHESTRATION_REDESIGN.md  MVP.md  MVP_STATUS.md  (+18 more)
(+299 files in other folders)
