[package]
name = "javis-desktop"
version = "0.1.0"
description = "Javis desktop workbench"
authors = ["Javis Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "javis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
tauri-plugin-dialog = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
ignore = "0.4"
notify = "6"
portable-pty = "0.8"

[target.'cfg(not(windows))'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Xps",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
] }
